--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,11 +16,20 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mockito: ^5.1.0
-  faker: ^2.0.0
   build_runner: ^2.1.7
+  flutter_launcher_icons: ^0.9.2
+  faker: ^2.0.0
+  mockito: ^5.1.0
 
 flutter:
   uses-material-design: true
   assets:
     - lib/ui/assets/
+
+flutter_icons:
+  ios: true
+  android: true
+  image_path_android: lib/ui/assets/icon/android.png
+  image_path_ios: lib/ui/assets/icon/ios.png
+  adaptive_icon_backgorund: lib/ui/assets/icon/background.png
+  adaptive_icon_foreground: lib/ui/assets/icon/foregorund.png
