--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,24 +1,25 @@
 name: fordev
 description: A new Flutter project.
 
-publish_to: 'none'
+publish_to: "none"
 version: 1.0.0+1
 
 environment:
   sdk: ">=2.14.0 <3.0.0"
 
 dependencies:
+  cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
   http: ^0.13.4
+  provider: ^6.0.2
 
 dev_dependencies:
+  build_runner: ^2.1.7
+  faker: ^2.0.0
+  flutter_launcher_icons: ^0.9.2
   flutter_test:
     sdk: flutter
-  build_runner: ^2.1.7
-  flutter_launcher_icons: ^0.9.2
-  faker: ^2.0.0
   mockito: ^5.1.0
 
 flutter:
