--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   sdk: ">=2.14.0 <3.0.0"
 
 dependencies:
+  carousel_slider: ^4.0.0
   cupertino_icons: ^1.0.2
   equatable: ^2.0.3
   flutter:
