--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   http: ^0.13.4
   intl: ^0.17.0
   provider: ^6.0.2
+  network_image_mock: ^2.1.0
 
 dev_dependencies:
   build_runner: ^2.1.7
